# DeepFunGen

./: .gitignore  AGENTS.md  LICENSE  README.md  requirements.txt
DeepFunGen/: DeepFunGen.csproj  DeepFunGen.sln  FindPeaks.cs  FrameThumbnailCache.cs  MainForm.Designer.cs  MainForm.cs  OnnxSequenceModel.cs  PostProcessor.cs  PostprocessDialog.cs  PostprocessOptions.cs  PredictionViewerForm.cs  Program.cs  VideoJob.cs  VideoProcessingService.cs
DeepFunGen.py/: main.py
DeepFunGen.py/backend/: app.py  jobs.py  logstream.py  models.py  onnx_runner.py  postprocess.py  postprocessor.py  (+5 more)
app.py/: build_uv.py  cli.py  requirements.txt
app.py/dist.uv/: main.py  pyproject.toml  run.bat
app.py/dist.uv/backend/: config.py  jobs.py  logstream.py  models.py  onnx_runner.py  postprocessor.py  storage.py  worker.py
app.py/dist.uv/frontend/static/js/: i18n.js
app.py/dist.uv/frontend/static/js/views/: logs.js  queue.js  settings.js  viewer.js
app.py/dist.uv/frontend/static/libs/: README.txt
app.py/dist.uv/frontend/templates/views/: settings.html  viewer.html
app.py/dist.uv/state/: jobs-state.json
configs/: conv_tcn_10_t59.yaml  conv_tcn_10_t60.yaml  conv_tcn_10_t61.yaml  conv_tcn_10_t62.yaml  conv_tcn_10_t64.yaml  conv_tcn_10_t65.yaml  conv_tcn_10_t66.yaml  conv_tcn_10_t67.yaml  conv_tcn_10_vr_t1.yaml  conv_tcn_10_vr_t2.yaml  conv_tcn_10_vr_t3.yaml  conv_tcn_10_vr_t4.yaml  conv_tcn_10_vr_t5.yaml  conv_tcn_10_vr_t6.yaml  conv_tcn_10_vr_t7.yaml  conv_tcn_10_vr_t8.yaml
scripts/: compare_predictions.py  config.py  export_onnx.py  hparam_sweep.py  inference.py  train.py
(+58 files in other folders)
